--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,5 @@ config_user.jsxinc
 amazon_web_service.conf
 
 # these scripting guides are compressed
-# extract them with `tar -zxf scripting.guides.tar.gz`
-adobeBridgeScripting/
-adobeIndesignScripting/
+# extract them with `tar -zxf Adobe-Scripting-Guides-and-Samples.tar.gz
+Adobe-Scripting-Guides-and-Samples/
